--- a/docker/mats-gms/entity-registry.yml
+++ b/docker/mats-gms/entity-registry.yml
@@ -2,8 +2,17 @@ entities:
   - name: dataset
     keyAspect: datasetKey
     aspects:
+      - viewProperties
+      - subTypes
       - datasetProfile
-  - name: datasource
-    keyAspect: datasourceKey
+      - datasetUsageStatistics
+  - name: dataHubPolicy
+    keyAspect: dataHubPolicyKey
     aspects:
-      - datasourceConnections
+      - dataHubPolicyInfo
+  - name: corpuser
+    keyAspect: corpUserKey
+    aspects:
+      - corpUserInfo
+      - corpUserEditableInfo
+      - corpUserStatus
