--- a/datahub-frontend/build.gradle
+++ b/datahub-frontend/build.gradle
@@ -51,4 +51,13 @@ tasks.withType(Checkstyle) {
 dependencies {
   compile 'mysql:mysql-connector-java:8.0.20'
   compile externalDependency.postgresql
+
+  constraints {
+    implementation("org.apache.logging.log4j:log4j-core:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+    implementation("org.apache.logging.log4j:log4j-api:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+  }
 }
