--- a/datahub-gms-graphql-service/build.gradle
+++ b/datahub-gms-graphql-service/build.gradle
@@ -13,6 +13,15 @@ dependencies {
     compile externalDependency.antlr4
     compileOnly externalDependency.lombok
     annotationProcessor externalDependency.lombok
+
+    constraints {
+        implementation("org.apache.logging.log4j:log4j-core:2.15.0") {
+            because("previous versions are vulnerable to CVE-2021-44228")
+        }
+        implementation("org.apache.logging.log4j:log4j-api:2.15.0") {
+            because("previous versions are vulnerable to CVE-2021-44228")
+        }
+    }
 }
 
 configurations {
