--- a/metadata-events/mxe-avro-1.7/build.gradle
+++ b/metadata-events/mxe-avro-1.7/build.gradle
@@ -15,6 +15,15 @@ dependencies {
   }
 
   avsc project(':metadata-events:mxe-schemas')
+
+  constraints {
+    implementation("org.apache.logging.log4j:log4j-core:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+    implementation("org.apache.logging.log4j:log4j-api:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+  }
 }
 
 def genDir = file("src/generated/java")
