--- a/metadata-events/mxe-schemas/build.gradle
+++ b/metadata-events/mxe-schemas/build.gradle
@@ -3,6 +3,15 @@ apply plugin: 'pegasus'
 
 dependencies {
   dataModel project(path: ':li-utils', configuration: 'dataTemplate')
+
+  constraints {
+    implementation("org.apache.logging.log4j:log4j-core:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+    implementation("org.apache.logging.log4j:log4j-api:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+  }
 }
 
 task copyMetadataModels(type: Copy) {
