--- a/metadata-service/factories/build.gradle
+++ b/metadata-service/factories/build.gradle
@@ -25,4 +25,13 @@ dependencies {
   compile spec.product.pegasus.restliSpringBridge
 
   testCompile externalDependency.gmaTestModelsDataTemplate
+
+  constraints {
+    implementation("org.apache.logging.log4j:log4j-core:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+    implementation("org.apache.logging.log4j:log4j-api:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+  }
 }
