--- a/metadata-service/graphql-api/build.gradle
+++ b/metadata-service/graphql-api/build.gradle
@@ -14,4 +14,13 @@ dependencies {
   compile externalDependency.lombok
 
   annotationProcessor externalDependency.lombok
+
+  constraints {
+    implementation("org.apache.logging.log4j:log4j-core:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+    implementation("org.apache.logging.log4j:log4j-api:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+  }
 }
