--- a/metadata-service/restli-api/build.gradle
+++ b/metadata-service/restli-api/build.gradle
@@ -10,4 +10,13 @@ dependencies {
 
   restClientCompile spec.product.pegasus.d2
   restClientCompile spec.product.pegasus.restliClient
+
+  constraints {
+    implementation("org.apache.logging.log4j:log4j-core:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+    implementation("org.apache.logging.log4j:log4j-api:2.15.0") {
+      because("previous versions are vulnerable to CVE-2021-44228")
+    }
+  }
 }
