--- a/datahub-frontend/run/frontend.env
+++ b/datahub-frontend/run/frontend.env
@@ -15,19 +15,19 @@ DATAHUB_PIWIK_SITEID="94" # change_to_your_piwik_id
 DATAHUB_PIWIK_URL="//piwik.corp.linkedin.com/piwik/"
 
 # GMS configuration
-DATAHUB_GMS_HOST=localhost
+DATAHUB_GMS_HOST=mtta2stm019.webex.com
 DATAHUB_GMS_PORT=8080
 
 # Uncomment to disable analytics tracking
 # DATAHUB_ANALYTICS_ENABLED=false
 
 # Kafka Producer Configuration
-KAFKA_BOOTSTRAP_SERVER=mtta2stm017.webex.com:29092
+KAFKA_BOOTSTRAP_SERVER=mtta2stm019.webex.com:29092
 DATAHUB_TRACKING_TOPIC=DataHubUsageEvent_v1
 
 # Required Elastic Client Configuration (Analytics)
-ELASTIC_CLIENT_HOST=mtta2stm017.webex.com
-ELASTIC_CLIENT_PORT=9200
+ELASTIC_CLIENT_HOST=esaaslab-esbtpt1-s.webex.com
+ELASTIC_CLIENT_PORT=443
 
 # OIDC Configs
 # AUTH_OIDC_ENABLED=true
