--- a/datahub-web-react/package.json
+++ b/datahub-web-react/package.json
@@ -84,7 +84,8 @@
         "uuid": "^8.3.2",
         "vx": "^0.0.1",
         "web-vitals": "^0.2.4",
-        "yamljs": "^0.3.0"
+        "yamljs": "^0.3.0",
+        "@visx/tooltip": "^2.2.2"
     },
     "scripts": {
         "analyze": "source-map-explorer 'dist/static/js/*.js'",
