ficed login cookie too large add mats logback appender

--- a/build.gradle
+++ b/build.gradle
@@ -136,7 +136,8 @@ project.ext.externalDependency = [
     'testContainersElasticsearch': 'org.testcontainers:elasticsearch:1.15.3',
     'typesafeConfig':'com.typesafe:config:1.4.1',
     'wiremock':'com.github.tomakehurst:wiremock:2.10.0',
-    'zookeeper': 'org.apache.zookeeper:zookeeper:3.4.14'
+    'zookeeper': 'org.apache.zookeeper:zookeeper:3.4.14',
+    'matsLogback': 'com.cisco.webex.mats:mats-monitoring-logback:0.0.2'
 ]
 
 allprojects {
