--- a/datahub-frontend/run/frontend.env
+++ b/datahub-frontend/run/frontend.env
@@ -15,31 +15,39 @@ DATAHUB_PIWIK_SITEID="94" # change_to_your_piwik_id
 DATAHUB_PIWIK_URL="//piwik.corp.linkedin.com/piwik/"
 
 # GMS configuration
-DATAHUB_GMS_HOST=localhost
+DATAHUB_GMS_HOST=mtta2stm019.webex.com
 DATAHUB_GMS_PORT=8080
 
 # Uncomment to disable analytics tracking
 # DATAHUB_ANALYTICS_ENABLED=false
 
 # Kafka Producer Configuration
-KAFKA_BOOTSTRAP_SERVER=localhost:9092
+KAFKA_BOOTSTRAP_SERVER=mtta2stm019.webex.com:9092
 DATAHUB_TRACKING_TOPIC=DataHubUsageEvent_v1
 
 # Required Elastic Client Configuration (Analytics)
-ELASTIC_CLIENT_HOST=localhost
-ELASTIC_CLIENT_PORT=9200
+ELASTIC_INDEX_PREFIX=mats_datahub
+ELASTIC_CLIENT_USE_SSL=true
+ELASTIC_CLIENT_HOST=esaaslab-esbtpt1-s.webex.com
+ELASTIC_CLIENT_PORT=443
+ELASTIC_CLIENT_PATH_PREFIX=esapi
+ELASTIC_CLIENT_USERNAME=matstest1
+ELASTIC_CLIENT_PASSWORD=changeme
 
 # OIDC Configs
-# AUTH_OIDC_ENABLED=true
-# AUTH_OIDC_CLIENT_ID=<client-id>>
-# AUTH_OIDC_CLIENT_SECRET=<client-secret>
-# AUTH_OIDC_DISCOVERY_URI=<idp-domain>/.well-known/openid-configuration
-# AUTH_OIDC_BASE_URL=http://localhost:9002
-# User and groups provisioning
-# AUTH_OIDC_JIT_PROVISIONING_ENABLED=true
-# AUTH_OIDC_PRE_PROVISIONING_REQUIRED=false
-# AUTH_OIDC_EXTRACT_GROUPS_ENABLED=true
-# AUTH_OIDC_GROUPS_CLAIM=groups
+AUTH_OIDC_ENABLED=true
+AUTH_OIDC_CLIENT_ID=datahub-test-client-id
+AUTH_OIDC_CLIENT_SECRET=matsdata2021
+AUTH_OIDC_DISCOVERY_URI=https://cloudsso.cisco.com/.well-known/openid-configuration
+AUTH_OIDC_BASE_URL=http://localhost:9002
+AUTH_OIDC_USER_NAME_CLAIM=email
+AUTH_OIDC_USER_NAME_CLAIM_REGEX="([^@]+)"
+AUTH_OIDC_SCOPE="openid profile email"
+
+ES_USERNAME=matswap
+ES_PASSWORD=MaTs@2020@ES
+HOST_NAME=zhoxie-local
+WBX_ALERT_INTERVAL=1
 
 # AUTH_JAAS_ENABLED=false
 
