--- a/repositories.gradle
+++ b/repositories.gradle
@@ -11,6 +11,9 @@ repositories {
     maven {
         url "https://linkedin.jfrog.io/artifactory/open-source/" // GMA, pegasus
     }
+    maven {
+        url "http://engci-maven.cisco.com/artifactory/cscmse-release"
+    }
 }
 
 try {
